--- a/styles/style.css
+++ b/styles/style.css
@@ -84,9 +84,17 @@ img {
   cursor: pointer;
 }
 
+.btn {
+  padding: 25px 40px;
+  font-weight: 700;
+  border-radius: 16px;
+  color: var(--hero-text);
+  background-color: var(--btn-color);
+}
+
 .section-title {
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 21px;
   font-size: 48px;
   font-weight: 400;
 }
@@ -94,7 +102,7 @@ img {
 .section-subtitle {
   margin: 0;
   margin-bottom: 8px;
-  font-size: 24px;
+  font-size: 2.4rem;
   font-weight: 700;
 }
 
@@ -104,13 +112,13 @@ img {
 
 .container {
   margin: 0 auto;
-  padding: 0 15px;
-  max-width: 1800px;
+  max-width: 1770px;
   width: 100%;
 }
 
 /* header */
 .header {
+  margin-bottom: 48px;
   padding: 13px 0;
   border-radius: 0px 0px var(--border-radius) var(--border-radius);
   background: var(--hero-text);
@@ -135,6 +143,129 @@ img {
 }
 
 .header__item {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 600;
 }
+
+/* hero */
+.hero__container {
+  margin-bottom: 53px;
+  padding: 101px 80px;
+  border-radius: var(--border-radius);
+  color: var(--hero-text);
+  background-image: url(../images/hero-bg.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.hero__wrapper {
+  max-width: 51%;
+  line-height: 1.2;
+}
+
+.hero__title {
+  margin: 0;
+  margin-bottom: 26px;
+  font-size: 7rem;
+  font-weight: 800;
+}
+
+.hero__descr {
+  margin: 0;
+  margin-bottom: 90px;
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
+.hero__btn {
+  font-size: 2.3rem;
+}
+
+/* about-us */
+.about-us__container {
+  margin-bottom: 101px;
+}
+
+.about-us__top {
+  max-width: 70%;
+}
+
+.about-us__descr {
+  margin: 0;
+  margin-bottom: 50px;
+  line-height: 2;
+}
+
+.about-us__bottom {
+  --offsets: 1;
+}
+
+.about-us__left {
+  position: relative;
+  align-items: flex-end;
+  margin-right: 32px;
+  flex-basis: 50%;
+  border-radius: var(--border-radius);
+  background-image: url("../images/about-us-bg.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.about-us__box {
+  padding: 50px;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  border-radius: var(--border-radius);
+  background-color: rgba(0, 0, 0, 0.50);
+}
+
+.box__descr {
+  margin: 0;
+  max-width: 450px;
+  line-height: 2;
+}
+
+.box__descr--color {
+  font-weight: 700;
+  color: var(--hero-text);
+}
+
+.box__btn {
+  padding: 19px 38px;
+  font-size: 16px;
+  color: var(--hero-text);
+  background-color: transparent;
+  border: 3px solid var(--btn-color);
+  border-radius: 16px;
+
+}
+
+.about-us__right {
+  flex-basis: 50%;
+  flex-direction: column;
+}
+
+.box {
+  padding: 65px 56px;
+  flex-basis: 50%;
+  border: 1px solid var(--footer-text);
+  border-radius: var(--border-radius);
+}
+
+.box:first-child {
+  margin-bottom: 32px;
+}
+
+.box__decor {
+  margin-right: 50px;
+  flex-shrink: 0;
+  min-width: 192px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+/* stages */
