--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ img {
 .section-title {
   margin: 0;
   margin-bottom: 21px;
-  font-size: 48px;
+  font-size: 4.8rem;
   font-weight: 400;
 }
 
@@ -235,7 +235,7 @@ img {
 
 .box__btn {
   padding: 19px 38px;
-  font-size: 16px;
+  font-size: 1.6rem;
   color: var(--hero-text);
   background-color: transparent;
   border: 3px solid var(--btn-color);
@@ -323,3 +323,37 @@ img {
   color: var(--main-text);
   background-color: transparent;
 }
+
+/* questions */
+.questions__container {
+  margin-bottom: 101px;
+}
+
+.questions__items {
+  --offsets: 2;
+  flex-wrap: wrap;
+  gap: 32px;
+}
+
+.questions__item {
+  padding: 65px;
+  padding-left: 60px;
+  width: calc((100% - (var(--offsets) * 32px)) / (var(--offsets) + 1));
+  border: 1px solid var(--footer-text);
+  border-radius: var(--border-radius);
+}
+
+.questions__title {
+  margin-bottom: 34px;
+}
+
+.questions__subtitle {
+  line-height: 1.2;
+}
+
+.questions__descr {
+  margin: 0;
+  line-height: 2;
+}
+
+/* footer */
