--- a/styles/style.css
+++ b/styles/style.css
@@ -92,6 +92,23 @@ img {
   background-color: var(--btn-color);
 }
 
+.btn:focus {
+  background-color: #ffb84d;
+  outline: none;
+  transition: background-color 0.3s;
+}
+
+.btn:hover {
+  background-color: #ffb84d;
+  transition: background-color 0.3s;
+}
+
+.btn:active {
+  background-color: #E1670E;
+  outline: none;
+  transition: background-color 0.3s;
+}
+
 .section-title {
   margin: 0;
   margin-bottom: 21px;
@@ -145,6 +162,71 @@ img {
 .header__item {
   font-size: 1.8rem;
   font-weight: 600;
+}
+
+.header__link {
+  position: relative;
+}
+
+.header__link:focus {
+  outline: 1px solid var(--btn-color);
+  outline-offset: 3px;
+}
+
+.header__link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  width: 100%;
+  height: 3px;
+  background-color: var(--btn-color);
+  transform: scaleX(0);
+  transition: transform 0.2s ease-in;
+}
+
+.header__link:hover::after {
+  transform: scaleX(1);
+}
+
+.header__link:active::after {
+  background-color: #e1670e;
+  transform: scaleX(1);
+}
+
+.header__link:active {
+  color: #e1670e;
+  outline: none;
+  transition: color 0.3s;
+}
+
+.header__btn:focus {
+  outline: 1px solid var(--btn-color);
+  outline-offset: 2px;
+}
+
+.header__btn:hover svg path {
+  stroke: var(--btn-color);
+  transition: stroke 0.3s;
+}
+
+.header__btn:hover svg rect {
+  fill: var(--btn-color);
+  transition: fill 0.3s;
+}
+
+.header__btn:active {
+  outline: none;
+}
+
+.header__btn:active svg path {
+  stroke: var(--main-text);
+  transition: stroke 0.3s;
+}
+
+.header__btn:active svg rect {
+  fill: var(--main-text);
+  transition: fill 0.3s;
 }
 
 /* hero */
@@ -205,7 +287,9 @@ img {
   position: relative;
   align-items: flex-end;
   margin-right: 32px;
-  flex-basis: 50%;
+  flex-basis: 49%;
+  flex-shrink: 0;
+  min-height: 100%;
   border-radius: var(--border-radius);
   background-image: url("../images/about-us-bg.jpg");
   background-position: center;
@@ -240,11 +324,28 @@ img {
   background-color: transparent;
   border: 3px solid var(--btn-color);
   border-radius: 16px;
+  transition: background-color 0.3s;
+}
 
+.box__btn:focus {
+  background-color: var(--btn-color);
+  outline: none;
+}
+
+.box__btn:hover {
+  background-color: var(--btn-color);
+  outline: none;
+}
+
+.box__btn:focus {
+  background-color: #e1670e;
+  outline: none;
+  border-color: #e1670e;
+  transition: border-color 0.3s;
 }
 
 .about-us__right {
-  flex-basis: 50%;
+  flex-basis: 49%;
   flex-direction: column;
 }
 
@@ -322,6 +423,29 @@ img {
   border: 1px solid var(--main-text);
   color: var(--main-text);
   background-color: transparent;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.stages__btn--transp:focus {
+  background-color: #666666;
+  outline: none;
+  color: var(--hero-text);
+  border-color: #666666;
+  transition: border-color 0.3s;
+}
+
+.stages__btn--transp:hover {
+  background-color: #666666;
+  color: var(--hero-text);
+  border-color: #666666;
+  transition: border-color 0.3s;
+}
+
+.stages__btn--transp:active {
+  background-color: var(--main-text);
+  color: var(--hero-text);
+  outline: none;
+  transition: border-color 0.3s;
 }
 
 /* questions */
@@ -399,8 +523,44 @@ img {
   line-height: 2;
 }
 
+.footer__link:focus {
+  outline: 1px solid var(--btn-color);
+  outline-offset: 3px;
+}
+
+.footer__link:hover {
+  color: var(--btn-color);
+  transition: color 0.3s;
+}
+
+.footer__link:active {
+  color: #e1670e;
+  outline: none;
+  transition: color 0.3s;
+}
+
 .social__item:not(:last-child) {
   margin-right: 25px;
+}
+
+.social__link:focus {
+  outline: 1px solid var(--btn-color);
+  outline-offset: 3px;
+}
+
+.social__link:hover svg path{
+  fill: var(--btn-color);
+  transition: fill 0.3s;
+}
+
+.social__link:active {
+  outline: none;
+}
+
+.social__link:active svg path{
+  fill: #e1670e;
+  outline: none;
+  transition: fill 0.3s;
 }
 
 .footer__title {
@@ -425,6 +585,21 @@ img {
   background-color: var(--form-color);
   border: none;
   border-radius: 16px;
+  transition: background-color 0.3s;
+}
+
+.form__input:focus {
+  outline: none;
+  background-color: #666666;
+}
+
+.form__input:hover {
+  background-color: #666666;
+}
+
+.form__input:active {
+  outline: none;
+  background-color: #666666;
 }
 
 .form__textarea {
@@ -432,14 +607,33 @@ img {
   resize: none;
 }
 
+.form__input:focus {
+  outline: none;
+  background-color: #666666;
+}
+
+.form__input:hover {
+  background-color: #666666;
+}
+
+.form__input:active {
+  outline: none;
+  background-color: #666666;
+}
+
 .footer__btn {
-  margin-right: 18px;
+  margin-right: 22px;
   padding: 20px 52px;
 }
 
 .footer__descr {
   margin: 0;
   line-height: 2;
+}
+
+.footer__check {
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 /* custom-checkbox */
