--- a/styles/media.css
+++ b/styles/media.css
@@ -45,7 +45,7 @@
   .hero__wrapper {
     margin-bottom: 38px;
     padding: 160px 77px;
-    background-image: url(../images/hero-mobile-bg.jpg);
+    background-image: url(../images/hero-tablet-bg.jpg);
   }
 
   .hero__title {
@@ -161,6 +161,9 @@
 }
 
 @media (max-width: 992px) {
+  :root {
+    --border-radius: 24px;
+  }
   /* header */
   .header {
     padding: 0;
@@ -182,5 +185,116 @@
 
   .header__items {
     gap: 43px;
+  }
+
+  /* hero */
+  .hero__wrapper {
+    margin-bottom: 38px;
+    padding: 160px 40px;
+    background-image: url(../images/hero-mobile-bg.jpg);
+  }
+
+  .hero__content {
+    max-width: 100%;
+  }
+
+  .hero__title {
+    font-size: 5rem;
+  }
+
+  .hero__descr {
+    font-size: 1.8rem;
+  }
+
+  /* about-us */
+  .about-us__container {
+    margin-bottom: 81px;
+  }
+
+  .about-us__descr {
+    margin-bottom: 55px;
+  }
+
+  .about-us__left {
+    min-height: 651px;
+  }
+
+  .about-us__box {
+    padding: 34px 40px;
+  }
+
+  .box {
+    padding: 35px;
+  }
+
+  .box__descr {
+    max-width: 418px;
+  }
+
+  .box__descr--color {
+    max-width: 382px;
+  }
+
+  .box__btn {
+    padding: 18px 36px;
+  }
+
+  .box__decor {
+    margin-right: 16px;
+    min-width: 119px;
+  }
+
+  /* stages */
+  .stages__title {
+    margin-bottom: 25px;
+  }
+
+  .stages__wrapper {
+    flex-direction: column-reverse;
+  }
+
+  .stages__picture {
+    margin-bottom: 41px;
+    min-height: 284px;
+  }
+
+  /* questions */
+  .questions__container {
+    margin-bottom: 79px;
+  }
+
+  .questions__item {
+    padding: 35px;
+    padding-left: 39px;
+  }
+
+  /* footer */
+  .footer__container {
+    flex-direction: column-reverse;
+  }
+
+  .footer__items {
+    display: none;
+  }
+
+  .footer__middle {
+    margin-bottom: 48px;
+    width: 81%;
+  }
+
+  .footer__check {
+    justify-content: flex-start;
+  }
+
+  .footer__btn {
+    padding: 20px 38px;
+  }
+
+  .footer__logo {
+    max-width: 224px;
+  }
+
+  .footer__left {
+    width: 34%;
   }
 }
